app/.cxx/Debug/e49n31n5/x86_64/android_gradle_build_stdout_native-lib_x86_64.txt
ninja: Entering directory `C:\Projects\Libraries\Logger\app\.cxx\Debug\e49n31n5\x86_64'
[1/2] Building C object CMakeFiles/native-lib.dir/src/main/cpp/coffeecatch.c.o
FAILED: CMakeFiles/native-lib.dir/src/main/cpp/coffeecatch.c.o 
F:\Users\Igor\AppData\Local\Android\Sdk\ndk\21.4.7075529\toolchains\llvm\prebuilt\windows-x86_64\bin\clang.exe --target=x86_64-none-linux-android21 --gcc-toolchain=F:/Users/Igor/AppData/Local/Android/Sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/windows-x86_64 --sysroot=F:/Users/Igor/AppData/Local/Android/Sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/windows-x86_64/sysroot -Dnative_lib_EXPORTS  -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security  -O0 -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/native-lib.dir/src/main/cpp/coffeecatch.c.o -MF CMakeFiles\native-lib.dir\src\main\cpp\coffeecatch.c.o.d -o CMakeFiles/native-lib.dir/src/main/cpp/coffeecatch.c.o -c ../../../../src/main/cpp/coffeecatch.c
../../../../src/main/cpp/coffeecatch.c:163:2: error: "Architecture is not supported (unknown ucontext layout)"
#error "Architecture is not supported (unknown ucontext layout)"
 ^
1 error generated.
ninja: build stopped: subcommand failed.
